# Forge

./: .env.local.example  .gitignore  Anchor.toml  DEPLOY.md  PLAN.md  README.md  WSL_DEPLOY.md  next.config.ts  package.json  tsconfig.json
programs/forge-arena/: Cargo.toml
programs/forge-arena/src/: lib.rs
scripts/: airdrop.sh  deploy.sh  seed-demo.sh
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/api/credentials/[wallet]/: route.ts
src/app/api/credentials/featured/: route.ts
src/app/api/matches/: route.ts
src/app/api/matches/[id]/: route.ts
src/app/api/matches/stream/: route.ts
src/app/api/problems/: route.ts
src/app/api/sponsors/: route.ts
src/app/api/stats/: route.ts
src/app/arena/: page.tsx
src/app/arena/[matchId]/: page.tsx
src/app/credentials/: page.tsx
src/app/credentials/[wallet]/: page.tsx
src/app/how-it-works/: page.tsx
src/app/manifesto/: page.tsx
src/app/recruiter/: page.tsx
src/app/sponsor/: page.tsx
src/app/status/: page.tsx
src/components/: PageHeader.tsx  SkillRadar.tsx
src/components/glass/: GlassButton.tsx  GlassNav.tsx  GlassPanel.tsx
src/components/landing/: CTASection.tsx  Footer.tsx  Hero.tsx  HeroOrb.tsx  HowItWorks.tsx  LiveDemo.tsx  PrimitiveStack.tsx  SocialProof.tsx  StatsBar.tsx  TrustedLogos.tsx
src/components/wallet/: ConnectWalletButton.tsx
src/hooks/: useForgeProgram.ts  useUsdcBalance.ts
src/lib/: anchor-client.ts  forge-idl.ts  forge-types.ts  hash.ts  judge-runner.ts  magicblock-er.ts  match-store.ts  problems.ts  proof-of-human.ts  solana.ts  usdc.ts
(+8 files in other folders)
