[package]
name = "forge-arena"
version = "0.1.0"
edition = "2021"
description = "Forge — on-chain coding duels with USDC stakes and Token-2022 credentials"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "forge_arena"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token", "token_2022", "associated_token"] }
